# sgrep

./: .dockerignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: build-demo.yml  deploy.yml
deploy/: Dockerfile  build_indexes.py
src/: embedder.py  main.py  sgrep.py  sgrep_mcp.py
src/sample_dir/: sample.py
src/visitor/: sgrep_visitor.py
src/web/: app.py
src/web/static/: index.html
tests/: test_mcp.py
